<?xml version="1.0"?>
<package format="2">
  <name>moveit_extensions</name>
  <version>0.0.0</version>
  <description>The moveit_extensions package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
</package>
